<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ln_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:layout_marginLeft="@dimen/px152"
    android:layout_marginTop="@dimen/px76"
    android:clipChildren="false"
    android:orientation="horizontal" >

    <cn.cantv.mediacenter.filebrowser.TbTextView
        android:id="@+id/btn_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px20"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/devicesname"
        android:textColor="@color/btn_selector"
        android:textSize="@dimen/px68" />

    <cn.cantv.mediacenter.filebrowser.TbTextView
        android:id="@+id/btn_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px144"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/picture"
        android:textColor="@color/btn_selector"
        android:textSize="@dimen/px68" />

    <cn.cantv.mediacenter.filebrowser.TbTextView
        android:id="@+id/btn_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px144"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/video"
        android:textColor="@color/btn_selector"
        android:textSize="@dimen/px68" />

    <cn.cantv.mediacenter.filebrowser.TbTextView
        android:id="@+id/btn_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px144"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:text="@string/audiao"
        android:textColor="@color/btn_selector"
        android:textSize="@dimen/px68" />

</LinearLayout>