<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/px200"
        android:layout_marginEnd="@dimen/px430"
        android:layout_marginStart="@dimen/px430"
        android:layout_marginTop="@dimen/px200"
        android:background="@drawable/home_devices_background" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/px105"
            android:text="@string/user_login"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_40" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="@dimen/px680"
            android:layout_height="@dimen/px80"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/px76"
            android:background="@drawable/youxian_txt"
            android:gravity="start|center_vertical"
            android:inputType="text"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/px32"
            android:singleLine="true"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px80"
            android:layout_alignBottom="@id/et_username"
            android:layout_marginRight="@dimen/px24"
            android:layout_toStartOf="@id/et_username"
            android:gravity="center_vertical"
            android:text="@string/str_username"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="@dimen/px680"
            android:layout_height="@dimen/px80"
            android:layout_below="@id/et_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/px22"
            android:background="@drawable/youxian_txt"
            android:gravity="start|center_vertical"
            android:inputType="textPassword"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/px32"
            android:singleLine="true"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px80"
            android:layout_alignBottom="@id/et_pwd"
            android:layout_marginRight="@dimen/px24"
            android:layout_toStartOf="@id/et_pwd"
            android:gravity="center_vertical"
            android:text="@string/str_pwd"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36" />

        <CheckBox
            android:id="@+id/cb_show_pwd"
            style="@style/cb_show_pwd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px36"
            android:layout_alignStart="@id/et_pwd"
            android:layout_below="@id/et_pwd"
            android:layout_marginStart="@dimen/px8"
            android:layout_marginTop="@dimen/px24"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/px24"
            android:text="@string/show_pwd"
            android:textSize="@dimen/fontsize_27" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px100"
            android:layout_below="@id/cb_show_pwd"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/px44"
            android:layout_marginTop="@dimen/px48"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="@dimen/px336"
                android:layout_height="match_parent"
                android:background="@drawable/btn2_normal"
                android:paddingBottom="@dimen/px15"
                android:text="@string/str_confirm"
                android:textColor="@color/per80_white"
                android:textSize="@dimen/fontsize_36" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/px336"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/px24"
                android:background="@drawable/btn2_normal"
                android:paddingBottom="@dimen/px15"
                android:text="@string/str_cancel"
                android:textColor="@color/per80_white"
                android:textSize="@dimen/fontsize_36" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>