<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#cc000000"
              android:orientation="horizontal" >

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="@dimen/px1056"
        android:layout_height="@dimen/px780"
        android:layout_marginBottom="@dimen/px112"
        android:layout_marginEnd="@dimen/px432"
        android:layout_marginStart="@dimen/px432"
        android:layout_marginTop="@dimen/px160"
        android:background="@drawable/home_devices_background">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/px50"
            android:text="@string/disclaimer_install"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/px46" />
        <LinearLayout
            android:id="@+id/et_text"
            android:layout_width="@dimen/px800"
            android:layout_height="@dimen/px360"
            android:layout_marginTop="@dimen/px60"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:background="@drawable/disclaimer_text">

            <TextView
                android:id="@+id/et_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/px15"
                android:layout_marginStart="@dimen/px15"
                android:layout_marginTop="@dimen/px30"
                android:paddingStart="@dimen/px15"
                android:text="@string/disclaimer_apkinfo"
                android:textColor="@color/per50_white"
                android:textSize="@dimen/px40" />

        </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/px196"
                android:layout_below="@id/et_text"
                android:layout_marginTop="@dimen/px30"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:weightSum="1">

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="@dimen/px396"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_normal_text"
                    android:text="@string/disclaimer_setting"
                    android:textColor="@color/per90_white"
                    android:textSize="@dimen/px34" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="@dimen/px396"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/px24"
                    android:background="@drawable/btn_normal_text"
                    android:text="@string/disclaimer_cancel"
                    android:textColor="@color/per90_white"
                    android:textSize="@dimen/px34"
                    android:layout_weight="7" />
            </LinearLayout>

    </RelativeLayout>

</LinearLayout>