<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#B2000000"
              android:gravity="center"
              android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="@dimen/px1100"
        android:layout_height="@dimen/px720"
        android:layout_marginTop="@dimen/px200"
        android:layout_marginBottom="@dimen/px200"
        android:layout_marginLeft="@dimen/px200"
        android:layout_marginRight="@dimen/px200"
        android:background="@drawable/home_devices_background">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/px105"
            android:text="@string/pls_input_device_ip"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/px50"/>

        <EditText
            android:id="@+id/et_ip"
            android:layout_width="@dimen/px680"
            android:layout_height="@dimen/px80"
            android:layout_below="@id/tv_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/px120"
            android:background="@drawable/share_edit_shape"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="start|center_vertical"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/px32"
            android:singleLine="true"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px80"
            android:layout_alignBottom="@id/et_ip"
            android:layout_marginRight="@dimen/px24"
            android:layout_toStartOf="@id/et_ip"
            android:gravity="center_vertical"
            android:text="@string/ip_addr"
            android:textColor="@color/per80_white"
            android:textSize="@dimen/fontsize_36"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px100"
            android:layout_below="@id/et_ip"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/px44"
            android:layout_marginTop="@dimen/px80"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="@dimen/px328"
                android:layout_height="@dimen/px80"
                android:background="@drawable/share_button_shape"
                android:text="@string/str_confirm"
                android:textColor="@color/per80_white"
                android:textSize="@dimen/fontsize_36"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/px328"
                android:layout_height="@dimen/px80"
                android:layout_marginStart="@dimen/px24"
                android:background="@drawable/share_button_shape"
                android:text="@string/str_cancel"
                android:textColor="@color/per80_white"
                android:textSize="@dimen/fontsize_36"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>